--- a/first_part/report/report.tex
+++ b/first_part/report/report.tex
@@ -5,7 +5,7 @@
 
 \title{Relazione per il Primo Progetto di Algoritmi e Strutture Dati e Laboratorio}
 \date{16-07-2020}
-\author{Alessandro Zanatta \\ 143154 \\ zanatta.alessandro@spes.uniud.it \and Christian Abbondo \\ 144033 \\ abbondo.christian@spes.uniud.it}
+\author{Alessandro Zanatta \\ 143154 \\ zanatta.alessandro@spes.uniud.it\\ \and Christian Abbondo \\ 144033 \\ abbondo.christian@spes.uniud.it\\ \\}
 
 \begin{document}
 
@@ -48,6 +48,7 @@
   		\label{fig:graph1}
 	\end{figure}	
 	
+	\newpage
 	
 	\subsection{Lunghezza $n=75000$ e $k$ variabile in $[0,n-1]$}
 	asdf
