GIF worksgit status

--- a/first_part/report/report.tex
+++ b/first_part/report/report.tex
@@ -189,7 +189,8 @@ Il caso più interessante è quello di HeapSelect. Il suo costo è effettivament
 	Si può osservare anche questo plot 3D in cui variano sia $n$ che $k$. La forma complessiva del grafico è in linea con quanto osservato finora.
 	
 	\begin{figure}[h!]
-  		\includegraphics[width=\linewidth]{images/HeapSelect3d_in2d.png}
+		\centering
+		\animategraphics[height=0.8\linewidth, autoplay]{12}{images/gif/animate_}{0}{122}
   		\caption{Tempo di esecuzione di HeapSelect per $n$ e $k$ variabili}
   		\label{fig:graph5}
 	\end{figure}
@@ -213,7 +214,5 @@ Il caso più interessante è quello di HeapSelect. Il suo costo è effettivament
 
 	\section{Conclusioni}
 	I risultati ottenuti sono stati molto interessanti e, a tratti, inaspettati. L'analisi sperimentale degli algoritmi in questione ha certamente contribuito ad una maggior consapevolezza nell'uso degli stessi.
-
-	\animategraphics[height=2.8in,autoplay,controls]{12}{images/gif/animate_}{0}{120}
 	
 \end{document}
